# hexagonal-rust

./: Cargo.toml  README.md
_docs/: hexagonal_implementation.drawio
config/: default.yaml
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/model/: comic.rs  mod.rs
domain/src/port/: mod.rs
domain/src/port/primary/: command.rs  mod.rs  query.rs
domain/src/port/secondary/: comics.rs  mod.rs
domain/src/usecase/: comic_command.rs  comic_query.rs  mod.rs
infra/: Cargo.toml
infra/src/: lib.rs  main.rs  settings.rs  startup.rs  state.rs
infra/src/db/: in_memory.rs  mod.rs
infra/src/web/routes/: comics.rs  health_check.rs  mod.rs
infra/tests/: health_check.rs
