[package]
name = "infra"
version = "0.1.0"
authors = ["Antoine Carton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "hexagonal-rust"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain", version = "0.1.0" }
anyhow = "1.0.38"
config = "0.10.1"
serde = "1.0.123"
serde_derive = "1.0.123"
tokio = "1.2.0"
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"

[dev-dependencies]
reqwest = "0.11.0"